--- a/index.html
+++ b/index.html
@@ -85,25 +85,25 @@
             <article class="sales">
                 <h4 class="sales-title">PROMOS</h4>
                 <form action="#" class="form">
-                    <input type="range" class="range" value="1" min="1" max="12" step="1" list="tickmarks">
+                    <input type="range" class="range" id="range" value="1" min="1" max="12" step="1" list="tickmarks" oninput="month.value=value">
                     <datalist id="tickmarks">
                         <option value="1" label="1">
-                            <option value="2" label="2">
-                                <option value="3" label="3">
+                        <option value="2" label="2">
+                        <option value="3" label="3">
                         <option value="4" label="4">
                         <option value="5" label="5">
                         <option value="6" label="6">
                         <option value="7" label="7">
                         <option value="8" label="8">
-                            <option value="9" label="9">
+                        <option value="9" label="9">
                         <option value="10" label="10">
-                            <option value="11" label="11">
-                                <option value="12" label="12">
-                                </datalist>
+                        <option value="11" label="11">
+                        <option value="12" label="12">
+                    </datalist>
                                 
                     <div class="month">
                         <label for="month">Meses:</label>
-                        <input type="text" name="month" id="form__month">
+                        <input type="number" name="month" id="month" min="1" max="12" value="1" oninput="range.value=value">
                     </div>
                     <div class="price">
                         <label for="price">Precio:</label>
