--- a/index.html
+++ b/index.html
@@ -5,118 +5,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="estilos.css">
+    <!-- css -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- iconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Cinzel:wght@400;500&family=El+Messiri&family=Julee&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&family=Josefin+Sans&family=Quicksand:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-    <title>PROYECTO</title>
+    <title>CALENARIO</title>
 </head>
 <body>
-    <!-- mi entrega será hacer una funcion que calcule el precio final de las ofertas segun sus meses -->
-    <!-- header -->
-    <header>
-        <div class="title">
-            <h2>SAKURA DOJO</h2>
-            <h3>ARTES MARCIALES</h3>
-        </div>
-        <!-- menu -->
-        <nav>
-            <ul class="nav-ul">
-                <li class="nav-li"><a href="#" class="nav-link">INICIO</a></li>
-                <li class="nav-li"><a href="#" class="nav-link">ACTIVIDADES</a></li>
-                <li class="nav-li"><a href="#" class="nav-link">PRECIOS</a></li>
-            </ul>
-        </nav>
+     <!-- HACER CALENDARIO AGENDA
+     debo poder agendar mis tareas y eventos en los distintos dias de la semana
+     ademas debo poder organizar mis horarios diarios
+     todo esto entrando con mi propio usario -->
+     <header id="top">
+        <h2 class="title">
+            MI SEMANA
+        </h2>
     </header>
-    <!-- main -->
+     
     <main>
-        <!-- banner -->
-        <div class="banner">
-            <img src="banner.jpg" alt="">
+        <div class="datos" id="datos">
+            <form action="#">
+                <h3>Agregar nueva tarea</h3>
+                <input type="text" class="day-selector" name="day-selector" id="day-selector" placeholder="Día/s de la tarea">
+                <input type="text" class="task-selector" name="task-selector" id="task-selector" placeholder="Nombre de tarea">
+                <textarea name="task-description" class="text-area-selector" id="task-description" cols="30" rows="10" placeholder="Descripcion de la tarea"></textarea>
+                <button type="submit">Agregar tarea</button>
+            </form>
         </div>
-        <!-- activities section -->
-        <section class="activities">
-            <div class="activities-title">
-                <h2>Escuela de Artes Marciales</h2>
-                <h4>Los mejores profesionales para aprender a defenderse</h4>
+        <div class="container-days">
+            <div class="day day--1">
+                <h4>Lunes</h4>
+                <ul>
+                    <li></li>
+                </ul>
             </div>
-            <article class="card card1">
-                <div class="card-content">
-                    <h3>Karate</h3>
-                    <div class="card-content-info">
-                        <span>profesor</span>
-                        <p>Sergio Rodriguez 7mo dan</p>
-                    </div>
-                </div>
-            </article>
-            <article class="card card2">
-                <div class="card-content">
-                    <h3>Karate niños</h3>
-                    <div class="card-content-info">
-                        <span>profesor</span>
-                        <p>Sergio grecco 6to dan</p>
-                    </div>
-                </div>
-            </article>
-            <article class="card card3">
-                <div class="card-content">
-                    <h3>kickboxing</h3>
-                    <div class="card-content-info">
-                        <span>profesor</span>
-                        <p>Sergio Rodriguez 7mo dan</p>
-                    </div>
-                </div>
-            </article>
-            <article class="card card4">
-                <div class="card-content">
-                    <h3>boxeo</h3>
-                    <div class="card-content-info">
-                        <span>profesor</span>
-                        <p>franco diaz 3er dan</p>
-                    </div>
-                </div>
-            </article>
-        </section>
-        <section class="prices">
-            <h4>PRECIOS</h4>
-            <p>Todas las actividades tienen un precio de $3000 por mes. <br> Incluye pase la libre al gimnacio.</p>
-            <article class="sales">
-                <h4 class="sales-title">PROMOS</h4>
-                <form action="#" class="form">
-                    <input type="range" class="range" id="range" value="1" min="1" max="12" step="1" list="tickmarks" oninput="month.value=value">
-                    <datalist id="tickmarks">
-                        <option value="1" label="1">
-                        <option value="2" label="2">
-                        <option value="3" label="3">
-                        <option value="4" label="4">
-                        <option value="5" label="5">
-                        <option value="6" label="6">
-                        <option value="7" label="7">
-                        <option value="8" label="8">
-                        <option value="9" label="9">
-                        <option value="10" label="10">
-                        <option value="11" label="11">
-                        <option value="12" label="12">
-                    </datalist>
-                                
-                    <div class="month">
-                        <label for="month">Meses:</label>
-                        <input type="number" name="month" id="month" min="1" max="12" value="1" oninput="range.value=value">
-                    </div>
-                    <div class="price">
-                        <label for="price">Precio:</label>
-                        <label for="price"></label>
-                    </div>
-                </form>
-            </article>
-        </section>
+            <div class="day day--2">
+                <h4>Martes</h4>
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="day day--3">
+                <h4>Miercoles</h4>
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="day day--4">
+                <h4>Jueves</h4>
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="day day--5">
+                <h4>Viernes</h4>
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="day day--6">
+                <h4>Sabado</h4>
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="day day--7">
+                <h4>Domingo</h4>
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
     </main>
-    <!-- footer -->
     <footer>
-        <p>RAFAEL NUÑEZ 6069</p>
+        <a href="#top">AGREGAR TAREA</a>
+        <p>TODOS LOS DERECHOS RESERVADOS <span id="date"></span></p>
     </footer>
-    <script src="desafio1.js"></script>
+    <script src="script.js"></script>
+
 </body>
 </html>
