--- a/index.html
+++ b/index.html
@@ -40,46 +40,39 @@
             </form>
         </div>
         <div class="container-days">
-            <div class="day day--1">
+            <div class="day" id="day1">
                 <h4>Lunes</h4>
-                <ul>
-                    <li></li>
+                <ul id="day1-ul">
                 </ul>
             </div>
-            <div class="day day--2">
+            <div class="day" id="day2">
                 <h4>Martes</h4>
-                <ul>
-                    <li></li>
+                <ul id="day2-ul">
                 </ul>
             </div>
-            <div class="day day--3">
+            <div class="day" id="day3">
                 <h4>Miercoles</h4>
-                <ul>
-                    <li></li>
+                <ul id="day3-ul">
                 </ul>
             </div>
-            <div class="day day--4">
+            <div class="day" id="day4">
                 <h4>Jueves</h4>
-                <ul>
-                    <li></li>
+                <ul id="day4-ul">
                 </ul>
             </div>
-            <div class="day day--5">
+            <div class="day" id="day5">
                 <h4>Viernes</h4>
-                <ul>
-                    <li></li>
+                <ul id="day5-ul">
                 </ul>
             </div>
-            <div class="day day--6">
+            <div class="day" id="day6">
                 <h4>Sabado</h4>
-                <ul>
-                    <li></li>
+                <ul id="day6-ul">
                 </ul>
             </div>
-            <div class="day day--7">
+            <div class="day" id="day7">
                 <h4>Domingo</h4>
-                <ul>
-                    <li></li>
+                <ul id="day7-ul">
                 </ul>
             </div>
         </div>
