--- a/index.html
+++ b/index.html
@@ -25,20 +25,35 @@
      todo esto entrando con mi propio usario -->
      <header id="top">
         <h2 class="title">
-            MI SEMANA
+            ORGANIZA TU SEMANA
         </h2>
     </header>
      
     <main>
         <div class="form-container" id="form-container">
-            <form action="#">
+            <div class="form">
                 <h3>Agregar nueva tarea</h3>
+
+
                 <input type="text" class="task-selector" name="task-selector" id="task-selector" placeholder="Nombre de tarea">
-                <input type="text" class="day-selector" name="day-selector" id="day-selector" placeholder="Día/s de la tarea">
-                <input type="text" class="hour-selector" name="hour-selector" id="hour-selector" placeholder="Hora de la tarea">
+                
+                <input type="text" class="day-selector" name="day-selector" id="day-selector" placeholder="Día/s de la tarea" list="days-option">
+
+                <datalist id="days-option">
+                    <option value="">Seleccione un día</option>
+                    <option value="1">Lunes</option>
+                    <option value="2">Martes</option>
+                    <option value="3">Miercoles</option>
+                    <option value="4">Jueves</option>
+                    <option value="5">Viernes</option>
+                    <option value="6">Sabado</option>
+                    <option value="7">Domingo</option>
+                </datalist>
+
+                <input type="time" class="hour-selector" name="hour-selector" id="hour-selector" placeholder="Hora de la tarea">
                 <textarea name="task-description" class="text-area-selector" id="task-description" cols="30" rows="10" placeholder="Descripcion de la tarea"></textarea>
-                <button type="submit" id="submit">Agregar tarea</button>
-            </form>
+                <button id="submit">Agregar tarea</button>
+            </div>
         </div>
         <div class="container-days">
             <div class="day" id="day1">
