--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
                     <option value="5">Viernes</option>
                     <option value="6">Sabado</option>
                     <option value="7">Domingo</option>
+                    <option value="8">Todos los días</option>
                 </datalist>
 
-                <input type="time" class="hour-selector" name="hour-selector" id="hour-selector" placeholder="Hora de la tarea">
+                <input type="text" class="hour-selector" name="hour-selector" id="hour-selector" placeholder="Hora">
                 <textarea name="task-description" class="text-area-selector" id="task-description" cols="30" rows="10" placeholder="Descripcion de la tarea"></textarea>
                 <button id="submit">Agregar tarea</button>
             </div>
@@ -91,8 +92,8 @@
                 <ul class="day-ul" id="day7-ul">
                 </ul>
             </div>
-            <button id="delete-all" class="delete-all">LIMPIAR TAREAS</button>
         </div>
+        <button id="delete-all" class="delete-all">LIMPIAR TAREAS</button>
     </main>
     <footer>
         <a href="#top">AGREGAR TAREA</a>
