--- a/index.html
+++ b/index.html
@@ -40,15 +40,13 @@
                 <input type="text" class="day-selector" name="day-selector" id="day-selector" placeholder="Día/s de la tarea" list="days-option">
 
                 <datalist id="days-option">
-                    <option value="">Seleccione un día</option>
-                    <option value="1">Lunes</option>
-                    <option value="2">Martes</option>
-                    <option value="3">Miercoles</option>
-                    <option value="4">Jueves</option>
-                    <option value="5">Viernes</option>
-                    <option value="6">Sabado</option>
-                    <option value="7">Domingo</option>
-                    <option value="8">Todos los días</option>
+                    <option value="lunes"></option>
+                    <option value="martes"></option>
+                    <option value="miercoles"></option>
+                    <option value="jueves"></option>
+                    <option value="viernes"></option>
+                    <option value="sabado"></option>
+                    <option value="domingo"></option>
                 </datalist>
 
                 <input type="text" class="hour-selector" name="hour-selector" id="hour-selector" placeholder="Hora">
@@ -59,37 +57,37 @@
         <div class="container-days">
             <div class="day" id="day1">
                 <h4 class="day-title">Lunes</h4>
-                <ul class="day-ul" id="day1-ul">
+                <ul class="day-ul" id="lunes-ul">
                 </ul>
             </div>
             <div class="day" id="day2">
                 <h4 class="day-title">Martes</h4>
-                <ul class="day-ul" id="day2-ul">
+                <ul class="day-ul" id="martes-ul">
                 </ul>
             </div>
             <div class="day" id="day3">
                 <h4 class="day-title">Miercoles</h4>
-                <ul class="day-ul" id="day3-ul">
+                <ul class="day-ul" id="miercoles-ul">
                 </ul>
             </div>
             <div class="day" id="day4">
                 <h4 class="day-title">Jueves</h4>
-                <ul class="day-ul" id="day4-ul">
+                <ul class="day-ul" id="jueves-ul">
                 </ul>
             </div>
             <div class="day" id="day5">
                 <h4 class="day-title">Viernes</h4>
-                <ul class="day-ul" id="day5-ul">
+                <ul class="day-ul" id="viernes-ul">
                 </ul>
             </div>
             <div class="day" id="day6">
                 <h4 class="day-title">Sabado</h4>
-                <ul class="day-ul" id="day6-ul">
+                <ul class="day-ul" id="sabado-ul">
                 </ul>
             </div>
             <div class="day" id="day7">
                 <h4 class="day-title">Domingo</h4>
-                <ul class="day-ul" id="day7-ul">
+                <ul class="day-ul" id="domingo-ul">
                 </ul>
             </div>
         </div>
