operadoresAvanzados-librerías-funcionCompletarTarea

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&family=Josefin+Sans&family=Quicksand:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-    <title>CALENARIO</title>
+
+    <!-- sweet alert js -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
+    <title>CALENDARIO</title>
 </head>
 <body>
      <!-- HACER CALENDARIO AGENDA
@@ -71,7 +76,6 @@
             </div>
             <div class="day" id="day5">
                 <h4 class="day-title">Viernes</h4>
-                <!-- FIXME: -->
                 <ul class="day-ul" id="viernes-ul">
                 </ul>
             </div>
