--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
         <div class="form-container" id="form-container">
             <form action="#" autocomplete="off">
                 <h3>Agregar nueva tarea</h3>
-                <input type="text" class="task-selector" name="task-selector" id="task-selector" placeholder="Nombre de tarea">
-                <input type="text" class="hour-selector" name="hour-selector" id="hour-selector" placeholder="Hora de tarea">
+                <label for="name">Nombre: </label>
+                <input type="text" class="task-selector" name="task-selector" id="task-selector" placeholder="Ingrese nombre">
+                <label for="hour">Hora: </label>
+                <input type="text" class="hour-selector" name="hour-selector" id="hour-selector" placeholder="Ingrese hora">
+                <label for="days"> Días: </label>
                 <div class="days-container">
-                    <label for="">Días: </label>
                     <input type="checkbox" class="lunes" name="lunes" id="lunes">
                     <input type="checkbox" class="martes" name="martes" id="martes">
                     <input type="checkbox" class="miercoles" name="miercoles" id="miercoles">
