--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      ademas debo poder organizar mis horarios diarios
      todo esto entrando con mi propio usario -->
      <header id="top">
-        <h2 class="title">
+        <h2>
             ORGANIZA TU SEMANA
         </h2>
     </header>
@@ -39,7 +39,7 @@
             <form class="form" action="#" autocomplete="off">
                 <h3>Agregar nueva tarea</h3>
                 <label for="name">Nombre: </label>
-                <input type="text" class="task-selector" name="task-selector" id="task-selector" placeholder="Ingrese nombre">
+                <input type="text" class="task-selector" name="task-selector" id="task-selector" placeholder="Ingrese nombre" required>
                 <label for="hour">Hora: </label>
                 <input type="text" class="hour-selector" name="hour-selector" id="hour-selector" placeholder="Ingrese hora">
                 <label for="days"> Días: </label>
@@ -55,40 +55,70 @@
                 <button id="submit">Agregar tarea</button>
             </form>
         </div>
+        <div class="select-display">
+            <button id="select-today" class="select-display__btn"> HOY </button>
+            <button id="select-week" class="select-display__btn actual"> SEMANA </button>
+            <div style="display: none;" class="holiday-reference" id="holiday-reference">
+                <p>FERIADOS: </p>
+                <p class="holiday-reference__circle--inamovible">INAMOVIBLE</p>
+                <p class="holiday-reference__circle--nolaborable">NO LABORABLE</p>
+                <p class="holiday-reference__circle--trasladable">TRASLADABLE</p>
+                <p class="holiday-reference__circle--puente">PUENTE</p>
+            </div>
+        </div>
         <div class="container-days" id="container-days">
             <div class="day" id="day1">
                 <h4 class="day-title">Lunes</h4>
+                <span class="day-date"></span>
+                <a style="display: none;" class="holiday-marker" target="_blank">FERIADO</a>
                 <ul class="day-ul" id="lunes-ul">
                 </ul>
             </div>
             <div class="day" id="day2">
                 <h4 class="day-title">Martes</h4>
+                <span class="day-date"></span>
+                <a style="display: none;" class="holiday-marker" target="_blank">FERIADO</a>
                 <ul class="day-ul" id="martes-ul">
                 </ul>
             </div>
             <div class="day" id="day3">
                 <h4 class="day-title">Miercoles</h4>
+                <span class="day-date"></span>
+                <a style="display: none;" class="holiday-marker" target="_blank">FERIADO</a>
                 <ul class="day-ul" id="miercoles-ul">
                 </ul>
             </div>
             <div class="day" id="day4">
                 <h4 class="day-title">Jueves</h4>
+                <span class="day-date"></span>
+                <a style="display: none;" class="holiday-marker" target="_blank">FERIADO</a>
                 <ul class="day-ul" id="jueves-ul">
                 </ul>
             </div>
             <div class="day" id="day5">
                 <h4 class="day-title">Viernes</h4>
+                <span class="day-date"></span>
+                <a style="display: none;" class="holiday-marker" target="_blank">FERIADO</a>
                 <ul class="day-ul" id="viernes-ul">
                 </ul>
             </div>
             <div class="day" id="day6">
                 <h4 class="day-title">Sabado</h4>
+                <span class="day-date"></span>
+                <a style="display: none;" class="holiday-marker" target="_blank">FERIADO</a>
                 <ul class="day-ul" id="sabado-ul">
                 </ul>
             </div>
             <div class="day" id="day7">
                 <h4 class="day-title">Domingo</h4>
+                <span class="day-date"></span>
+                <a style="display: none;" class="holiday-marker" target="_blank">FERIADO</a>
                 <ul class="day-ul" id="domingo-ul">
+                </ul>
+            </div>
+            <div style="display: none;" class="holiday" id="holiday">
+                <h4 class="day-title">FERIADOS DE LA SEMANA</h4>
+                <ul class="day-ul" id="holiday-ul">
                 </ul>
             </div>
         </div>
